--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   get: ^4.6.6
   carousel_slider: ^4.2.1
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_test:
