--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^4.2.1
   video_player: ^2.9.1
+  sensors_plus: ^6.0.0
 
 dev_dependencies:
   flutter_test:
