--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>1096898407302-pgalpt2jgk2ffbsmhtgvfemb7v6ismo6.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.1096898407302-pgalpt2jgk2ffbsmhtgvfemb7v6ismo6</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>1096898407302-to1p3krr7l4d44kj2jp77u3p5chm0ril.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCZkEAmzKTtf-vo2Lo8UQ-RVkfKj7Z85Kg</string>
 	<key>GCM_SENDER_ID</key>
