--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   carousel_slider: ^5.0.0
   video_player: ^2.9.1
   sensors_plus: ^6.0.0
+  json_serializable: ^6.8.0
+  url_launcher: ^6.3.0
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
